Refactored JSON handling and added associated tests